# FOURTH_LAB_OOP

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  point.h  rectangle.h  square.h  triangle.h
tests/: test_figures.cpp
